# SyncHarbor

./: .gitignore  BaseStorage.h  CMakeLists.txt  CallbackDispatcher.cpp  CallbackDispatcher.h  LICENSE  LocalStorage.cpp  LocalStorage.h  Networking.cpp  Networking.h  README.md  base_cloud.hpp  change-factory.h  cloud-factory.h  cloud-registry.h  cloudsync  command.h  database.cpp  database.h  database.hpp  dropbox.cpp  dropbox.h  dropbox.hpp  google.cpp  google.h  google_cloud.cpp  google_cloud.hpp  http-server.cpp  logger.cpp  logger.h  main.cpp  sync_handler.cpp  sync_handler.h  sync_handler.hpp  test.cpp  utils.h  utils.hpp
.github/workflows/: ci.yml
include/: BaseStorage.h  CallbackDispatcher.h  LocalStorage.h  Networking.h  active-count.h  change-factory.h  change.h  cloud-factory.h  command-chain-factory.h  command.h  commands.h  conflict-resolver.h  daemonizer.h  database.h  dropbox.h  event-registry.h  google.h  http-server.h  logger.h  request-handle.h  sync-manager.h  thread-safe-queue.h  utils.h
scripts/: bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  mk.sh  tests.ps1  tests.sh
src/: CallbackDispatcher.cpp  LocalStorage.cpp  Networking.cpp  active-count.cpp  change.cpp  commands.cpp  conflict-resolver.cpp  database.cpp  dropbox.cpp  event-registry.cpp  google.cpp  http-server.cpp  logger.cpp  main.cpp  request-handle.cpp  sync-manager.cpp  utils.cpp
tests/: CMakeLists.txt  DatabaseTests.cpp  LocalStorageTests.cpp  test-conf
tests/e2e/: e2e_sync_test.py
tests/integration/: HttpClientIntegrationTests.cpp  LocalStorageIntegrationTests.cpp
tests/unit/: ActiveCountUnitTests.cpp  CallbackDispatcherUnitTests.cpp  EventRegistryUnitTests.cpp  HttpServerUnitTests.cpp  RequestHandleUnitTests.cpp  SyncManagerUnitTests.cpp  UtilsUnitTests.cpp
tests/unit/database/: CloudConfigTests.cpp  DatabaseTestFixture.h  FileLinkTests.cpp  FileTableTests.cpp  MiscDatabaseTests.cpp
tests/unit/local-storage/: LocalStorageCloudTests.cpp  LocalStorageFsEventTests.cpp  LocalStoragePathTests.cpp  LocalStorageSimpleTests.cpp  LocalStorageTestFixture.h
